@@ -4,15 +4,14 @@ import com.l02gr01.escape.Game;
 import com.l02gr01.escape.gui.GUI;
 import com.l02gr01.escape.model.Level;
 import com.l02gr01.escape.model.Position;
-import com.l02gr01.escape.model.elements.Exit;
 import com.l02gr01.escape.model.elements.Player;
 import com.l02gr01.escape.model.elements.Wall;
 import com.l02gr01.escape.model.elements.enemies.Enemy;
 import com.l02gr01.escape.model.elements.enemies.MovingStrategy.RandomMovingStrategy;
 import com.l02gr01.escape.model.elements.enemies.Troll;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
 import org.mockito.Mockito;
 
 import java.io.IOException;
@@ -41,7 +40,7 @@ class EnemyControllerTest {
         Mockito.when(enemy.getStrategy()).thenReturn(new RandomMovingStrategy());
         Mockito.when(enemy.getPosition()).thenReturn(new Position(1, 1));
 
-        level.setEnemies(Arrays.asList(enemy));
+        level.setEnemies(List.of(enemy));
 
         enemyController.step(game, GUI.ACTION.NONE, 1000);
 
@@ -53,7 +52,7 @@ class EnemyControllerTest {
     @Test
     void testOnlyMonsterMove() throws IOException {
         Troll troll = new Troll(2,2);
-        level.setEnemies(Arrays.asList(troll));
+        level.setEnemies(List.of(troll));
         level.setWalls(Arrays.asList(new Wall(3,2), new Wall(2,3), new Wall(2,1)));
 
         long time = 0;
